c2prj1_cards/grade.txt
Grading at Mon May 17 08:33:19 UTC 2021
Compiling cards.c
cards.c: In function ‘card_from_num’:
cards.c:84:1: error: expected declaration or statement at end of input
 }
 ^
cards.c:84:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors
Could not compile your card.c!

Overall Grade: FAILED
